// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect render renders TreeNode correctly 1`] = `
<div>
  <div
    class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft  rc-tree-select-dropdown-hidden"
  >
    <div>
      <span
        class="rc-tree-select-dropdown-search"
      >
        <span
          class="rc-tree-select-search__field__wrap"
        >
          <input
            class="rc-tree-select-search__field"
            role="textbox"
            value=""
          />
        </span>
      </span>
      <ul
        class="rc-tree-select-tree"
        role="tree-node"
        unselectable="true"
      >
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="0 label"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              0 label
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-noline_open"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
            title="1 label"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              1 label
            </span>
          </a>
          <ul
            class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
              />
              <a
                class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                title="10 label"
              >
                <span
                  class="rc-tree-select-tree-title"
                >
                  10 label
                </span>
              </a>
            </li>
            <li
              class=""
            >
              <span
                class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
              />
              <a
                class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                title="11 label"
              >
                <span
                  class="rc-tree-select-tree-title"
                >
                  11 label
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeSelect render renders correctly 1`] = `
<span
  class="forTest awesome awesome-enabled"
  style="width:300px;"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="awesome-selection
              awesome-selection--multiple"
    role="combobox"
  >
    <ul
      class="awesome-selection__rendered"
    >
      <li
        class="awesome-search awesome-search--inline"
      >
        <span
          class="awesome-search__field__wrap"
        >
          <input
            class="awesome-search__field"
            role="textbox"
            value=""
          />
        </span>
      </li>
    </ul>
  </span>
</span>
`;

exports[`TreeSelect render renders disabled correctly 1`] = `
<span
  class="rc-tree-select rc-tree-select-disabled"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="rc-tree-select-selection
              rc-tree-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none;"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect render renders tree correctly 1`] = `
<div>
  <div
    class="rc-tree-select-dropdown awesome rc-tree-select-dropdown--multiple rc-tree-select-dropdown-placement-bottomLeft  rc-tree-select-dropdown-hidden"
    style="width:300px;"
  >
    <div>
      <ul
        class="rc-tree-select-tree"
        role="tree-node"
        unselectable="true"
      >
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <span
            class="rc-tree-select-tree-checkbox"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="0 label"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              0 label
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-noline_open"
          />
          <span
            class="rc-tree-select-tree-checkbox"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
            title="1 label"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              1 label
            </span>
          </a>
          <ul
            class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
              />
              <span
                class="rc-tree-select-tree-checkbox"
              />
              <a
                class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                title="10 label"
              >
                <span
                  class="rc-tree-select-tree-title"
                >
                  10 label
                </span>
              </a>
            </li>
            <li
              class=""
            >
              <span
                class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
              />
              <span
                class="rc-tree-select-tree-checkbox"
              />
              <a
                class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                title="11 label"
              >
                <span
                  class="rc-tree-select-tree-title"
                >
                  11 label
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeSelect render renders treeDataSimpleMode correctly 1`] = `
<div>
  <div
    class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft  rc-tree-select-dropdown-hidden"
  >
    <div>
      <span
        class="rc-tree-select-dropdown-search"
      >
        <span
          class="rc-tree-select-search__field__wrap"
        >
          <input
            class="rc-tree-select-search__field"
            role="textbox"
            value=""
          />
        </span>
      </span>
      <ul
        class="rc-tree-select-tree"
        role="tree-node"
        unselectable="true"
      >
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="label0"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              label0
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="label1"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              label1
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeSelect search nodes renders search input 1`] = `
<div>
  <div
    class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft  rc-tree-select-dropdown-hidden"
  >
    <div>
      <span
        class="rc-tree-select-dropdown-search"
      >
        <span
          class="rc-tree-select-search__field__wrap"
        >
          <input
            class="rc-tree-select-search__field"
            role="textbox"
            value=""
          />
        </span>
      </span>
      <ul
        class="rc-tree-select-tree"
        role="tree-node"
        unselectable="true"
      >
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="labela"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              labela
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <span
            class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop rc-tree-select-tree-noline_docu"
          />
          <a
            class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
            title="labelb"
          >
            <span
              class="rc-tree-select-tree-title"
            >
              labelb
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
